--- a/app/src/main/res/layout/fragment_account_activation.xml
+++ b/app/src/main/res/layout/fragment_account_activation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -10,7 +11,7 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="230dp"
             android:background="@color/deep_blue"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,16 +24,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="60dp"
                     android:layout_margin="20dp"
-                    android:fontFamily="@font/nunito_sans_extra_bold"
-                    android:letterSpacing="0.25"
-                    android:text="TENDO"
-                    android:textColor="@color/white"
-                    android:textSize="32sp"
-                    android:textStyle="bold" />
+                    android:scaleType="fitEnd"
+                    android:src="@drawable/tendo" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,13 +55,13 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_sparkle_header"/>
+                    android:src="@drawable/ic_sparkle_header" />
             </FrameLayout>
-
 
 
         </LinearLayout>
@@ -74,6 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enter activation code"
+            android:textColor="@color/text_create_account"
             android:fontFamily="@font/poppins_medium"
             android:layout_marginTop="30dp"
             android:textSize="16sp"
@@ -81,26 +79,76 @@
             app:layout_constraintStart_toStartOf="@+id/linearLayout"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-        <EditText
-            android:id="@+id/etOTP"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:hint=" ------ "
-            android:inputType="phone"
-            android:letterSpacing="1"
-            android:maxLength="6"
-            android:maxLines="1"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:text=""
-            android:textAlignment="center"
-            android:textSize="22sp"
-            android:layout_marginTop="100dp"
-            app:layout_constraintBottom_toTopOf="@id/btnActivateAccount"
-            app:layout_constraintEnd_toEndOf="@+id/tvText"
-            app:layout_constraintStart_toStartOf="@+id/tvText"
-            app:layout_constraintTop_toBottomOf="@id/tvText" />
+        <LinearLayout
+            android:id="@+id/codeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_margin="36dp"
+            app:layout_constraintTop_toBottomOf="@id/tvText"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/digit1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="13dp"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                android:background="@drawable/border_edit_text"
+                android:imeOptions="actionDone"
+                android:textColor="@color/primary"
+                android:inputType="phone"
+                android:maxLength="2"
+                android:maxLines="1"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/digit2"
+                android:layout_margin="8dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="13dp"
+                android:textColor="@color/primary"
+                android:layout_weight="1"
+                android:background="@drawable/border_edit_text"
+                android:imeOptions="actionDone"
+                android:inputType="phone"
+                android:maxLength="2"
+                android:maxLines="1"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/digit3"
+                android:layout_width="0dp"
+                android:layout_margin="8dp"
+                android:textColor="@color/primary"
+                android:layout_height="match_parent"
+                android:background="@drawable/border_edit_text"
+                android:layout_marginEnd="13dp"
+                android:layout_weight="1"
+                android:imeOptions="actionDone"
+                android:inputType="phone"
+                android:maxLength="2"
+                android:maxLines="1"
+                android:textAlignment="center" />
+
+            <EditText
+                android:id="@+id/digit4"
+                android:layout_width="0dp"
+                android:layout_margin="8dp"
+                android:layout_height="match_parent"
+                android:textColor="@color/primary"
+                android:layout_weight="1"
+                android:background="@drawable/border_edit_text"
+                android:inputType="phone"
+                android:imeOptions="actionDone"
+                android:maxLength="2"
+                android:maxLines="1"
+                android:textAlignment="center" />
+
+        </LinearLayout>
 
 
         <androidx.appcompat.widget.AppCompatButton
@@ -111,12 +159,12 @@
             android:fontFamily="@font/poppins_bold"
             android:gravity="center|center_vertical|center_horizontal"
             android:text="Activate account"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tvAlreadyHaveAccount"
+            android:layout_marginBottom="24dp"
             android:textColor="@color/white"
-            android:textSize="15sp"
-            android:layout_marginTop="190dp"
-            app:layout_constraintEnd_toEndOf="@id/etOTP"
-            app:layout_constraintStart_toStartOf="@+id/etOTP"
-            app:layout_constraintTop_toBottomOf="@id/etOTP" />
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/tvAlreadyHaveAccount"
@@ -127,9 +175,8 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/btnActivateAccount"
-            app:layout_constraintStart_toStartOf="@+id/btnActivateAccount"
-            app:layout_constraintTop_toBottomOf="@+id/btnActivateAccount" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
