--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -10,33 +10,6 @@
         android:background="@color/deep_blue">
 
 
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            android:layout_margin="20dp"
-            android:scaleType="fitEnd"
-            android:src="@drawable/tendo" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nunito_sans_extra_bold"
-            android:text="Earn with Tendo with 3 easy steps."
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView2"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@id/tvTendo" />
-
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
@@ -44,7 +17,7 @@
             android:src="@drawable/ic_firstscreen_one"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView" />
@@ -54,33 +27,29 @@
             android:layout_width="320dp"
             android:layout_height="300dp"
             android:src="@drawable/ic_first_screen"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toBottomOf="@id/guideline4" />
 
         <TextView
             android:id="@+id/tvFindProducts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Find Products on Tendo"
+            android:text="Add profit and share"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="36dp"
             android:textStyle="bold"
             android:fontFamily="@font/nunito_sans_bold"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintVertical_bias="0.4"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
             android:id="@+id/tvWehaveHundreds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="We have over 100s of products listed \nat wholesale prices."
+            android:text="Add your profit to the products and\nshare online."
             android:textColor="@color/grey"
             android:fontFamily="@font/poppins_regular"
             app:layout_constraintHorizontal_bias="0"
@@ -88,5 +57,11 @@
             app:layout_constraintStart_toStartOf="@+id/tvFindProducts"
             app:layout_constraintTop_toBottomOf="@+id/tvFindProducts" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
