--- a/app/src/main/res/layout/fragment_second_screen.xml
+++ b/app/src/main/res/layout/fragment_second_screen.xml
@@ -6,89 +6,64 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.view.fragments.screens.SecondScreenFragment"
-        android:background="@color/deep_blue">
+        android:background="@color/deep_blue"
+        tools:context=".ui.main.view.fragments.screens.SecondScreenFragment">
 
-        <TextView
-            android:id="@+id/tvTendo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:fontFamily="@font/nunito_sans_extra_bold"
-            android:letterSpacing="0.25"
-            android:text="TENDO"
-            android:textColor="@color/white"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nunito_sans_extra_bold"
-            android:text="Earn with Tendo with 3 easy steps."
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView2"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@id/tvTendo" />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_secondscreen_two"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
+            android:src="@drawable/ic_secondscreen_two"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView" />
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@id/guideline4"
             android:layout_width="320dp"
             android:layout_height="300dp"
             android:src="@drawable/ic_second_screen"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5" />
 
         <TextView
             android:id="@+id/tvFindProducts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/nunito_sans_bold"
             android:text="Add profit and share"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:fontFamily="@font/nunito_sans_bold"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintVertical_bias="0.4"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/tvWehaveHundreds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
             android:text="Add your profit to the products and\nshare online."
             android:textColor="@color/grey"
-            android:fontFamily="@font/poppins_regular"
-            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintEnd_toEndOf="@+id/tvFindProducts"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/tvFindProducts"
             app:layout_constraintTop_toBottomOf="@+id/tvFindProducts" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
