--- a/app/src/main/res/layout/fragment_third_screen.xml
+++ b/app/src/main/res/layout/fragment_third_screen.xml
@@ -9,35 +9,6 @@
         tools:context=".ui.main.view.fragments.screens.ThirdScreenFragment"
         android:background="@color/deep_blue">
 
-        <TextView
-            android:id="@+id/tvTendo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:fontFamily="@font/nunito_sans_extra_bold"
-            android:letterSpacing="0.25"
-            android:text="TENDO"
-            android:textColor="@color/white"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/nunito_sans_extra_bold"
-            android:text="Earn with Tendo with 3 easy steps."
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/imageView2"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
-            app:layout_constraintTop_toBottomOf="@id/tvTendo" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -46,7 +17,7 @@
             android:src="@drawable/ic_thirdscreen_three"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="@+id/imageView" />
@@ -56,11 +27,9 @@
             android:layout_width="320dp"
             android:layout_height="300dp"
             android:src="@drawable/ic_third_screen"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toBottomOf="@id/guideline4" />
 
         <TextView
             android:id="@+id/tvFindProducts"
@@ -69,14 +38,12 @@
             android:text="Earn cash"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="36dp"
             android:textStyle="bold"
             android:fontFamily="@font/nunito_sans_bold"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintVertical_bias="0.4"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
             android:id="@+id/tvWehaveHundreds"
@@ -89,6 +56,13 @@
             app:layout_constraintEnd_toEndOf="@+id/tvFindProducts"
             app:layout_constraintStart_toStartOf="@+id/tvFindProducts"
             app:layout_constraintTop_toBottomOf="@+id/tvFindProducts" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.15" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
