--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -5,11 +5,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:paddingBottom="24dp"
         android:layout_height="match_parent"
         tools:context=".ui.main.view.fragments.ViewPagerFragment"
         android:background="@color/deep_blue">
-
         <Button
             android:id="@+id/btnSkip"
             android:layout_width="wrap_content"
@@ -20,6 +18,29 @@
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:id="@+id/imageView_logo"
+            android:layout_marginTop="36dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="fitEnd"
+            android:src="@drawable/tendo" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_sans_extra_bold"
+            android:text="@string/earn_with_tendo_with_3_easy_steps"
+            android:textColor="@color/white"
+            android:paddingTop="12dp"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView_logo" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
@@ -27,7 +48,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="40dp"
             app:layout_constraintVertical_bias="0.3"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -40,40 +61,42 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="36dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+            android:layout_marginBottom="96dp"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnGetStarted"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:layout_height="wrap_content"
             android:background="@drawable/button_background_shape"
-            android:text="Get Started"
-            android:gravity="center|center_vertical|center_horizontal"
-            android:visibility="gone"
+            android:text="@string/get_started"
+            android:visibility="visible"
             android:textColor="@color/white"
             android:fontFamily="@font/poppins_bold"
             android:textSize="15sp"
+            android:paddingRight="24dp"
+            android:paddingLeft="24dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/viewPager"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager"
-            app:layout_constraintVertical_bias="0.7"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <Button
-            android:id="@+id/btnNext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
-            android:text="Next"
-            android:visibility="invisible"
-            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintHorizontal_bias="1"
-            app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/LLindicatorContainer"
-            app:layout_constraintTop_toBottomOf="@+id/viewPager" />
+<!--        <Button-->
+<!--            android:id="@+id/btnNext"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="#00FFFFFF"-->
+<!--            android:text="Next"-->
+<!--            android:visibility="invisible"-->
+<!--            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"-->
+<!--            app:layout_constraintVertical_bias="0"-->
+<!--            app:layout_constraintHorizontal_bias="1"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/LLindicatorContainer"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/viewPager" />-->
 
 
 
