--- a/app/src/main/res/drawable/ratings_button.xml
+++ b/app/src/main/res/drawable/ratings_button.xml
@@ -1,15 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?><!--All the values used are defined in the constant files.-->
-<!--TODO Step 4: Add the favorite icon round background.-->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/white"/>
-
-    <corners android:radius="30sp"/>
-
-    <padding
-        android:bottom="5dp"
-        android:left="5sp"
-        android:right="5sp"
-        android:top="5sp"/>
+    <solid android:color="#1099EE"/>
+    <stroke android:width="1dp" android:color="#000"/>
+    <padding android:left="10dp" android:top="10dp" android:right="10dp"/>
+    <corners android:radius="10dp"/>
 </shape>
