--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,7 +26,7 @@
                 android:src="@drawable/ic_back"/>
 
             <TextView
-                android:id="@+id/tv_account"
+                android:id="@+id/textview_profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Profile"
@@ -251,7 +251,7 @@
                     android:id="@+id/t5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Change Password"
+                    android:text="Enter Password"
                     android:textSize="14sp"
                     android:fontFamily="@font/poppins_bold"
                     android:textColor="#223263"
@@ -275,9 +275,20 @@
                     android:src="@drawable/ic_forward"
                     android:layout_toEndOf="@id/tvchange"
                     android:layout_marginTop="20dp"
-                    android:layout_marginStart="25dp"/>
+                    android:layout_marginStart="45dp"/>
 
             </RelativeLayout>
+
+            <Button
+                android:id="@+id/Edit_Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:background="@drawable/ratings_button"
+                android:text="Edit Profile"
+                android:textAllCaps="false"/>
 
         </LinearLayout>
     </RelativeLayout>
