--- a/app/src/main/res/layout/fragment_shares.xml
+++ b/app/src/main/res/layout/fragment_shares.xml
@@ -1,17 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.main.view.fragments.SharesFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Shares"
-        android:textStyle="bold"
-        android:textSize="42sp"
-        android:gravity="center"/>
+        android:layout_height="match_parent">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context=".ui.main.view.fragments.HomeFragment">
+
+            <LinearLayout
+                android:id="@+id/LLheader"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:background="@drawable/background_header_with_sparkle"
+                android:orientation="vertical"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/nunito_sans_extra_bold"
+                    android:letterSpacing="0.25"
+                    android:text="TENDO"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+
+                <LinearLayout
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="20dp">
+
+                    <FrameLayout
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="22dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_heart_white" />
+
+
+                    </FrameLayout>
+
+
+                    <FrameLayout
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:id="@+id/notifi"
+                            android:layout_width="match_parent"
+                            android:layout_height="22dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_notification_white" />
+
+                        <TextView
+                            android:id="@+id/tvNotificationCount"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginEnd="6dp"
+                            android:background="@drawable/circle_bg"
+                            android:layout_gravity="end"
+                            android:gravity="center"
+                            android:maxLength="4"
+                            android:text="5"
+                            android:textColor="@color/white"
+                            android:textSize="10sp" />
+
+
+                    </FrameLayout>
+
+                    <FrameLayout
+                        android:layout_width="26dp"
+                        android:layout_height="26dp"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="22dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_shopping_cart" />
+
+                        <TextView
+                            android:id="@+id/tvShoppingCartCount"
+                            android:layout_width="15dp"
+                            android:layout_height="15dp"
+                            android:layout_marginEnd="2dp"
+                            android:background="@drawable/circle_bg"
+                            android:layout_gravity="end"
+                            android:gravity="center"
+                            android:maxLength="4"
+                            android:text="8"
+                            android:textColor="@color/white"
+                            android:textSize="10sp" />
+
+                    </FrameLayout>
+
+
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:id="@+id/LLSearchView"
+                    android:layout_width="350dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center_horizontal"
+                    android:orientation="horizontal"
+                    android:background="@drawable/searchview_custom_shape">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="25dp"
+                        android:src="@drawable/ic_search_icon_blue"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Search.."
+                        android:textSize="18sp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="16dp"/>
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewpager_22"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:layout_marginTop="15dp"
+                android:paddingEnd="40dp"
+                android:paddingStart="40dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/LLheader"/>
+
+            <LinearLayout
+                android:id="@+id/LLViewPagerIndicator"
+                android:layout_width="70dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="@+id/viewpager_22"
+                app:layout_constraintStart_toStartOf="@+id/viewpager_22"
+                app:layout_constraintTop_toBottomOf="@id/viewpager_22" />
+
+
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </ScrollView>
+
+
+</layout>
