--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="button_save">#1099EE</color>
     <color name="deep_blue">#09427D</color>
     <color name="light_teal">#5FE6C1</color>
     <color name="light_blue">#1099EE</color>
